fix: scrollbar 수정 및 추천공모전 경로수정

--- a/coward/src/main/webapp/resources/styles/scss/mypage-company-main.scss
+++ b/coward/src/main/webapp/resources/styles/scss/mypage-company-main.scss
@@ -38,8 +38,8 @@
   &-developer {
     &-card {
       &-scroll {
+        @include scrollbar;
         height: 200px;
-        overflow: auto;
       }
 
       border: 1px solid $border;
@@ -112,31 +112,25 @@
 }
 
 .contest-slider-card {
+  @include scrollbar;
   height: $contest-slider-card-height-sm;
   border-radius: 10px;
-  overflow: hidden;
   cursor: pointer;
   box-shadow: $card-shadow;
   margin: 0 10px 30px 0;
   position: relative;
 
-  &.is-hover {
-    .contest-slider-card-info {
-      transform: translate3d(0, -55%, 0);
-    }
-  }
-
   &-img {
+    @include scrollbar;
     @include flexbox;
     height: 180px;
-    overflow: hidden;
 
     img {
       display: block;
 
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      //object-fit: cover;
     }
   }
 
@@ -180,12 +174,12 @@
   justify-content: center;
 }
 
-#colDiv {
-  margin-left: -10px;
+#cotest-slider {
+  @include scrollbar;
 }
 
-.scroll::-webkit-scrollbar {
-  display: none;
+#colDiv {
+  margin-left: -10px;
 }
 
 .mypage-introduce {
